# git-web-link

./: README.md  default.nix  git-web-link.cabal  git-web-link.nix  package.yaml  stack.yaml
app/: Main.hs
src/: GitWebLink.hs
src/GitWebLink/: FileOps.hs  GitHub.hs  GitOps.hs  GitRemote.hs  GitRepository.hs  GitWebProvider.hs  Parameters.hs  Parsing.hs  Paths.hs  Types.hs
test/: Doctests.hs
