name:                git-web-link
version:             0.2
-- synopsis:
-- description:
homepage:            https://github.com/eddsteel/git-web-link#readme
license:             BSD3
license-file:        LICENSE
author:              Edward Steel
maintainer:          edward.steel@gmail.com
copyright:           GPL
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitWebLink
                     , GitWebLink.FileOps
                     , GitWebLink.GitHub
                     , GitWebLink.GitOps
                     , GitWebLink.GitRemote
                     , GitWebLink.GitWebProvider
                     , GitWebLink.Parsing
                     , GitWebLink.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , network-uri
                     , regex-base
                     , regex-tdfa
                     , text
                     , turtle
                     , transformers
                     , url
  default-language:    Haskell2010

executable git-web-link
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , git-web-link
                     , text
                     , turtle
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctests.hs
  build-depends:       base
                     , git-web-link
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddsteel/git-web-link
